[project]
name = "gridwatch-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "feedparser>=6.0.0",
    "pymongo>=4.0.0",
]

[project.optional-dependencies]
observability = [
    "prometheus-client>=0.20.0",
    "sentry-sdk>=2.0.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx",
    "prometheus-client>=0.20.0",
]
